# ursus

./: .gitignore  Cargo.toml  README.md
playground/: Scarb.toml
playground/src/: lib.cairo
src/: args.rs  execute.rs  lib.rs  main.rs  prove.rs
ursus/: Cargo.toml  build.sh
ursus/src/: compile.rs  execute.rs  run.rs
