[package]
name = "ursus"
version = "0.1.0"
edition = "2024"

[dependencies]
stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "4c98cbb", features = [
    "std",
] }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "4c98cbb" }
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "4c98cbb" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "b1a91f929b5fa29a1a2e9e6990a68a1220c0c673", features = [
    "mod_builtin",
] }
