[package]
name = "ursus"
version = "0.1.0"
edition = "2024"

[dependencies]
stwo_cairo_prover = { path = "/home/ohad/stwo-cairo/stwo_cairo_prover/crates/prover" }
stwo-cairo-adapter = { path = "/home/ohad/stwo-cairo/stwo_cairo_prover/crates/adapter", features = [
    "std",
] }
# stwo-cairo-adapter = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "4c98cbb", features = [
#     "std",
# ] }
# stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "4c98cbb" }
# cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "4c98cbb" }
cairo-air = { path = "/home/ohad/stwo-cairo/stwo_cairo_prover/crates/cairo-air" }
cairo-lang-compiler = { git = "https://github.com/ohad-agadi/cairo.git" }
cairo-lang-executable = { git = "https://github.com/ohad-agadi/cairo.git" }
cairo-lang-execute-utils = { git = "https://github.com/ohad-agadi/cairo.git" }
cairo-lang-runner = { git = "https://github.com/ohad-agadi/cairo.git" }
serde_json = "1.0.138"
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm", rev = "b1a91f929b5fa29a1a2e9e6990a68a1220c0c673", features = [
    "mod_builtin",
] }
clap = { version = "4.5.38", features = ["derive"] }
